# tsbricks

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  Taskfile.yml  min-overrides.txt  pyproject.toml
.github/workflows/: ci.yml
docs/: api.rst  conf.py  index.rst  overview.rst
notebooks/: backtest_validation.py  sample_config.yaml
notes/: PACKAGE_MAINTAINER_SPEC.md  spec_forecast_backtest_system_v1.md
src/tsbricks/_testing/: agg_callables.py  capturing_metric.py  dummy_metrics.py  dummy_models.py  param_resolvers.py
src/tsbricks/backtesting/: __init__.py  aggregations.py  cross_validation.py  engine.py  evaluation.py  results.py  schema.py  temporal_agg.py
src/tsbricks/blocks/: dataio.py  diagnostics.py  metadata.py  metrics.py  plots.py  utils.py
src/tsbricks/blocks/transforms/: __init__.py  base.py  box_cox.py  boxcox.py  workday.py
src/tsbricks/runner/: __init__.py  _utils.py  model_invocation.py  transform_pipeline.py  warnings_utils.py
tests/: conftest.py  test_smoke.py
tests/backtesting/: conftest.py  test_config.py  test_cross_validation.py  test_evaluation.py  test_schema.py  test_temporal_agg.py
tests/blocks/: conftest.py  test_dataio.py  test_diagnostics.py  test_metadata.py  test_metrics.py  test_plots.py  test_utils.py
tests/blocks/transforms/: conftest.py  test_boxcox.py  test_workday.py  test_working_day.py
tests/helpers/: dummy_models.py
tests/integration/: test_fold_resilience.py  test_minimal_backtest.py
tests/runner/: conftest.py  test_model_invocation.py  test_transform_pipeline.py  test_utils.py  test_warnings_utils.py
