[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tsbricks"
version = "0.1.0"
description = ""
authors = [
    { name = "Elizabeth H. Camp", email = "betsy.h.camp@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "coreforecast>=0.0.16",
    "gcsfs>=2024.2.0",
    "google-cloud-bigquery[bqstorage,pandas]>=3.40.1",
    "jinja2>=3.1",
    "numpy>=2.0",
    "pandas==2.3.3",
    "plotly>6.0",
    "pyarrow>=17.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "scipy>=1.11",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
matplotlib = ["matplotlib>=3.8"]
notebooks = ["statsforecast>=2.0"]
polars = ["polars>=1.0.0"]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pre-commit",
    "jupytext",
    "mdformat",
    "mdformat-gfm",
    "sphinx",
    "furo",
    "sphinx-autodoc-typehints",
    "myst-parser",
    "matplotlib>=3.8",
    "pandas-stubs==2.3.3.*",
    "pytest-cov",
    "pytest-mock>=3.15.1",
    "ipykernel",
    "jupyterlab",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tsbricks"]

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = ["*.md", ".venv", "notebooks"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["tsbricks"]
branch = true
omit = ["src/tsbricks/_testing/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    'if __name__ == "__main__"',
    "raise NotImplementedError",
    "pass",
    "\\.\\.\\.",
    "assert_never",
    "raise AssertionError",
]

[tool.coverage.html]
directory = "htmlcov"
